syntax = "proto3";

option csharp_namespace = "SGS.Infrastructure";

package payment;

service PaymentRPC {
  rpc CreateMomoTransaction (MomoCreateRequest) returns (MomoCreateResponse);
}

message MomoCreateRequest {
  string order_id = 1;
  int64 amount = 2;
  string order_info =3;
  optional string order_group_id = 4;
  optional string trans_id = 5;
}

message MomoCreateResponse { 
  string partner_code =1;
  string request_id =2;
  string order_id =3; 
  int64 amount =4; 
  int64 response_time =5;
  string message =6; 
  int32 result_code =7; 
  string pay_url =8; 
  string deeplink =9; 
  string qr_code_url =10;
  string deeplink_web_in_app =11;
}

